Eliminate section 9.1 on Signals (old 9.2 becomes 9.1)
Revise to use DatePicker & general expository code cleanup in order to
mesh with the updated text.

--- a/09/9.2/index.html
+++ b/09/9.2/index.html
@@ -4,15 +4,14 @@
     <meta charset="utf-8" />
     <title>Biking</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <!-- TODO: <link rel="stylesheet" href="css/bootstrap-theme.min.css" />-->
+    <link rel="stylesheet" href="css/elm-datepicker.css" />
     <script type="text/javascript" src="js/elm.js"></script>
-    <!-- TODO: <script type="text/javascript" src="js/bootstrap.min.js"></script>-->
   </head>
   <body>
     <div id="container"></div>
     <script>
       var container = document.getElementById('container');
-      var app = Elm.Main.embed(container);
+      Elm.Main.embed(container);
     </script>
   </body>
 </html>
