--- a/05/nesting2.html
+++ b/05/nesting2.html
@@ -1,14 +1,15 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8">
     <title>Display</title>
-    <script src="types.js"></script>
   </head>
   <body>
     <form action="#">
       <input id="text">
       <button onclick="display()">Display</button>
     </form>
-
     <h1 id="target"></h1>
+    <script src="js_out/types.js"></script>
   </body>
 </html>
